chore: Update npm dependencies and fix scrollbar color in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ main {
     grid-row: 2 / 3;
     background-color: #fff;
     overflow-y: scroll;
-    scrollbar-color: red orange;
+
     scrollbar-width: thin;
     position: relative;
 }
